Fix mobile footer text overflow

--- a/src/components/home/Footer.module.css
+++ b/src/components/home/Footer.module.css
@@ -73,6 +73,6 @@
     }
 
     .mainText {
-        font-size: 18vw;
+        font-size: 12.5vw;
     }
 }
